codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__agents_overview_model_grouping_arrow_filters.snap
---
source: tui/src/app/agents_overview_tests.rs
expression: "render_bottom_popup(&app.chat_widget,\n100).replace(&test_path_display(\"/tmp/project\"),\n\"/tmp/project\").replace(\"fwd del\", \"del\")"
---
  Agent command center  Group: Model  g
   All 4   Needs you 0   Working 0   Ready 4   Inactive 0                               ←/→ filter
  ────────────────────────────────────────────────────────────────────────────────────────────────
      Tasks                                               │ Task details
  Unknown  1                                              │
  › ○ Legacy task                                         │ Legacy task
                                                          │ ○ Ready
  model-a  2                                              │
    ○ Recent task                                         │ Model: Unknown
    ○ Older task                                          │ Reasoning: Unknown
                                                          │
  model-b  1                                              │ Project
    ○ Other model                                         │ /tmp/project
                                                          │
                                                          │ Prompt
                                                          │ Legacy task
                                                          │
                                                          │
                                                          │
                                                          │
                                                          │
                                                          │
                                                          │
  ? help  esc back  ↑/↓ move  enter open  n new
